# ide-active-files

./: .gitignore  README.md  mcp_active_files.md
ide-files/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SETUP.md  TODO.md  VSCODE_IMPROVEMENTS.md  test-vscode.sh  test_terminal_editors.sh
ide-files/scripts/: setup-completion.sh  test-installation.sh
ide-files/src/: detector.rs  main.rs  process.rs  types.rs
ide-files/src/detectors/: jetbrains.rs  mod.rs  terminal.rs  vscode.rs
