[package]
name = "ide-files"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
thiserror = "1.0"
shell-words = "1.1"
rusqlite = { version = "0.30", features = ["bundled"] }

# Platform specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "tlhelp32"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
cocoa = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18", features = ["xlib"] }